--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Afra Anika (afraanikaa@gmail.com)",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sequelize": "^6.26.0"
   }
