--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog-api",
   "version": "1.0.0",
   "description": "A Simple Blog API using TypeScript, Node JS, Express & MySQL",
-  "main": "app.ts",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
